--- a/src/components/login_page/login.css
+++ b/src/components/login_page/login.css
@@ -11,7 +11,7 @@
   width:100vw;
   height:100vw;
   position:fixed;
-  background-image: linear-gradient(rgba(26, 24, 24, 0.5), rgba(24, 23, 23, 0.5)), url("../images/keyboard.jpg");
+  background-image: linear-gradient(rgba(26, 24, 24, 0.8), rgba(24, 23, 23, 0.8)), url("../images/keyboard.jpg");
   /* background: rgba(19, 22, 20, 0.6); */
 }
 
@@ -19,13 +19,13 @@
   color:red;
   font-size: 12px;
 }
-form label{
+form_login label{
   font-size:15px;
   color:black;
   font:bolder;
   font-weight: 300;
 }
-.form {
+.form_login {
   background-color: rgb(30, 30, 30, 0.4);
   position: relative;
   z-index: 1;
@@ -40,19 +40,19 @@ form label{
   border-radius: 18px;
   border: 4px solid black;
 }
-input {
-  border: 2px solid rgb(59, 58, 58);
-}
-.form input {
+
+.form_login input {
   font-family: "Roboto", sans-serif;
   background: #f2f2f2;
   width: 100%;
   margin: 0 0 ;
+  padding :2% 2% 2% 2%;
   box-sizing: border-box;
   font-size: 14px;
-  
+  border-radius : 20px;
+  border: 2px solid rgb(59, 58, 58);
 }
-.form button {
+.form_login button {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   float: left;
@@ -67,10 +67,10 @@ input {
   transition: all 0.3 ease;
   cursor: pointer;
 }
-.form button:hover,.form button:active,.form button:focus {
+.form_login button:hover,.form_login button:active,.form_login button:focus {
   background: #cde211;
 }
-.form .message {
+.form_login .message {
   margin: 15px 0 0;
   color: #b3b3b3;
   font-size: 12px;
@@ -79,11 +79,11 @@ input {
   margin:0;
   margin-bottom: 5%;
 }
-.form .message a {
+.form_login .message a {
   color: black;
   text-decoration: none;
 }
-.form .register-form {
+.form_login .register-form {
   display: none;
 }
 .container {
