--- a/src/components/register_page/register.css
+++ b/src/components/register_page/register.css
@@ -23,8 +23,8 @@ label {
     background-image: url("../images/register.jpg");
     overflow: hidden;
 }
-/* Add padding to container elements */
-.container {
+/* Add padding to container22 elements */
+.container2 {
     padding: 15px;
     padding-top:50%;
     width: 500px;
